Filter projects by category.